# quartz-api

./: .all-contributorsrc  .dockerignore  Containerfile  README.md  pyproject.toml
.github/workflows/: branch_ci.yml  bump_tag.yml  ci.yml  tagged_ci.yml
src/quartz_api/cmd/: _logging.py  main.py  server.conf
src/quartz_api/internal/backends/dataplatform/: client.py  test_client.py
src/quartz_api/internal/backends/dummydb/: client.py  test_dummydb.py
src/quartz_api/internal/backends/quartzdb/: client.py  conftest.py  smooth.py  test_csv.py  test_quartzdb.py
src/quartz_api/internal/config/: env.py
src/quartz_api/internal/inputs/: __init__.py
src/quartz_api/internal/inputs/dummydb/: client.py  test_dummydb.py
src/quartz_api/internal/inputs/quartzdb/: client.py  conftest.py  smooth.py  test_csv.py  test_quartzdb.py
src/quartz_api/internal/middleware/: audit.py  auth.py  sentry.py  trace.py
src/quartz_api/internal/models/: __init__.py  db_interface.py  endpoint_types.py
src/quartz_api/internal/service/: csv.py  database_client.py  regions.py  resample.py  server.py  sites.py  test_resample.py
src/quartz_api/internal/service/regions/: _csv.py  _resample.py  router.py  test_resample.py
src/quartz_api/internal/service/sites/: router.py
src/quartz_api/internal/service/substations/: __init__.py  router.py  time_utils.py
src/quartz_api/internal/service/uk_national/: __init__.py  description.py  gsp.py  national.py  pydantic_models.py  router.py  status.py  system.py
