# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-git-versioning>=1.13.3"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "quartz-api"
dynamic = ["version"] # Set automatically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
description = "Quartz API for wind and solar data"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11.0, <3.14"
license = {text = "MIT License"}
authors = [
    { name = "Sol Cotton", email = "sol@openclimatefix.org"},
    { name = "Open Climate Fix", email = "info@openclimatefix.org"}
]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "cryptography >= 41.0.0",
    "dp-sdk",
    "fastapi>=0.105.0",
    "pvsite-datamodel == 1.2.3",
    "pyjwt >= 2.8.0",
    "pyproj >= 3.3.0",
    "pytz >= 2023.3",
    "uvicorn >= 0.24.0",
    "numpy >= 1.25.0",
    "sentry-sdk >= 2.1.1",
    "pyhocon>=0.3.61",
    "apitally[fastapi]>=0.22.3",
    "auth0-fastapi-api>=1.0.0b5",
]

[dependency-groups]
dev = [
    "unittest-xml-reporting >= 3.2.0",
    "pytest >= 8.0.0",
    "pytest-cov >= 4.1.0",
    "testcontainers >= 3.7.1",
    "ruff >= 0.1.7",
    "ruff-lsp >= 0.0.48",
    "python-lsp-server>=1.9.0",
    "pylsp-mypy>=0.6.8",
    "types-pytz>=2025.2.0.20251108",
    "pandas-stubs>=2.3.2.250926",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
dp-sdk = { url = "https://github.com/openclimatefix/data-platform/releases/download/v0.16.0/dp_sdk-0.16.0-py3-none-any.whl" }

[project.urls]
repository = "https://github.com/openclimatefix/quartz-api"

[project.scripts]
quartz-api = "quartz_api.cmd.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.conf", "*.ico", "*.png", "*.html", "*.js"]

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}"

# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true

[tool.pylsp-mypy]
enabled = true
dmypy = true

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
indent-width = 4
# Use pydocstyle Google convention
# See https://www.pydocstyle.org/en/stable/error_codes.html
exclude = ["__init__.py"]

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413",
]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN", "S"]


